-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 050501) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.0 *-

??052001 (v2.0.1)
	- fixed: disk buffers weren't properly flushed in -z:db mode 
		 when changing or setting processing position
	- fixed: bugs in assigning LADSPA plugin audio ports to 
	  	 ecasound chain channels
	- fixed: configure script failed if arts was installed 
	  	 without the devel files (arts-devel) 
	- fixed: bug in the MIDI-server code caused core dumps in
		 certain situations
	- fixed: bug in querying -klg parameter status
02052001 (v2.0.0)  -** stable release **-
	- added: -klg - a generic linear envelope; a controller source
		 that can be used to map custom envelopes to chain 
		 operator parameters [artham]
	- fixed: segfaults when trying to access non-existing preset
		 parameters
	- fixed: segfault if tried to copp-get without first
		 selecting a parameter with copp-select
	- fixed: few bugs in ewf looping routines
	- fixed: 'make uninstall' forgot some files and dirs
	- fixed: bug in ALSA 0.9.x xrun handling
24042001 (v1.9dev6)
	- added: eiam - cs-setpos, cs-set-position; aliases for setpos
	- added: eiam - cs-getpos, cs-get-position; aliases for getpos
	- added: eiam - cs-rewind and cs-forward; aliases for rewind 
		 and forward
	- added: eiam - cs-get-length; alias for get-length